fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,6 @@ a:hover {
 
 
 .tmm-before {
-  padding-top: 10em;
 }
 
 
